Creadas las páginas principales

--- a/RedSports/src/app/chat/chat.page.html
+++ b/RedSports/src/app/chat/chat.page.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Home</ion-title>
+    <ion-title>chat</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <h1>Homeeee</h1>
+
 </ion-content>
