--- a/RedSports/src/app/notificaciones/notificaciones.page.html
+++ b/RedSports/src/app/notificaciones/notificaciones.page.html
@@ -1,5 +1,5 @@
-<ion-header>
-    <ion-toolbar>
+<ion-header >
+    <ion-toolbar color="primary">
         <ion-title>Notificaciones</ion-title>
     </ion-toolbar>
 </ion-header>
@@ -19,7 +19,7 @@
 
 <ion-content padding>
         <div id="item" *ngFor="let item of items">
-            <ion-card name="element" style="margin:0px;margin-bottom: 10px">
+            <ion-card color="primary" name="element" style="margin:0px;margin-bottom: 10px">
                 <ion-item style="--inner-border-width:0">
                     <img src="assets/pelota.png" style="width:128px;height: 128px" padding/>
                     <ion-item-group >
