Añadida ruta tabs/evento en tabs routing

--- a/RedSports/src/app/evento/evento.page.html
+++ b/RedSports/src/app/evento/evento.page.html
@@ -19,7 +19,7 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-  <ion-button size="medium" expand='full' (click)="apuntarseEnEvento()" [color]="buttonColor" style="margin:10px">
+  <ion-button size="medium" expand='full' (click)="apuntarseEnEvento()" [color]=buttonColor style="margin:10px">
       {{ participar }}
   </ion-button>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
