--- a/RedSports/src/theme/variables.scss
+++ b/RedSports/src/theme/variables.scss
@@ -12,7 +12,7 @@
   --ion-color-primary-tint: #ff867c;
 
   /** secondary **/
-  --ion-color-secondary: #0cd1e8;
+  --ion-color-secondary: #3880FF;
   --ion-color-secondary-rgb: 12, 209, 232;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
