--- a/RedSports/src/app/tabs/tabs.page.html
+++ b/RedSports/src/app/tabs/tabs.page.html
@@ -20,6 +20,10 @@
       <ion-icon name="chatboxes"></ion-icon>
       <ion-label>Chat</ion-label>
     </ion-tab-button>
+    <ion-tab-button tab="pruebas">
+        <ion-icon name="chatboxes"></ion-icon>
+        <ion-label>Pruebas</ion-label>
+      </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
