--- a/RedSports/src/app/login/login.page.html
+++ b/RedSports/src/app/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title>Welcome to RedSports!</ion-title>
   </ion-toolbar>
 </ion-header>
 
