--- a/RedSports/src/app/login/login.page.html
+++ b/RedSports/src/app/login/login.page.html
@@ -22,7 +22,7 @@
         </div>
   
         <div padding>
-          <ion-button size="large" href="/touchid" expand="block">Login</ion-button>
+          <ion-button size="large" href="/tabs/inicio" expand="block">Login</ion-button>
         </div>
       </ion-col>
     </ion-row>
