--- a/RedSports/src/app/login/login.page.html
+++ b/RedSports/src/app/login/login.page.html
@@ -13,16 +13,15 @@
         </div>
         <div padding>
           <ion-item>
-            <ion-input type="text" placeholder="Username"></ion-input>
+            <ion-input [(ngModel)]="email" type="text" placeholder="Email"></ion-input>
           </ion-item>
   
           <ion-item>
-            <ion-input type="password" placeholder="Password"></ion-input>
+            <ion-input [(ngModel)]="pass" type="password" placeholder="Password"></ion-input>
           </ion-item>
         </div>
-  
         <div padding>
-          <ion-button size="large" href="/tabs/inicio" expand="block">Login</ion-button>
+          <ion-button size="large" (click)="goToHome()" expand="block">Login</ion-button>
         </div>
       </ion-col>
     </ion-row>
