--- a/RedSports/src/app/pruebas/pruebas.page.html
+++ b/RedSports/src/app/pruebas/pruebas.page.html
@@ -5,5 +5,7 @@
 </ion-header>
 
 <ion-content>
-
+    <button (click)="requestPermission()">
+        Hey this is a chat app, you should let us send you notifications for these reasons!
+      </button>
 </ion-content>
