--- a/RedSports/src/app/eventos/eventos.page.html
+++ b/RedSports/src/app/eventos/eventos.page.html
@@ -33,7 +33,7 @@
 
   <div id="item" *ngFor="let item of items">
       <ion-card color="primary" name="element" style="margin:0px;margin-bottom: 10px">
-          <ion-item style="--inner-border-width:0">
+          <ion-item [href]="'/evento/' + item.key" style="--inner-border-width:0">
               <img src="assets/pelota.png" style="width:128px;height: 128px" padding/>
               <ion-item-group >
                   <ion-item-divider style="border-bottom:none">
