Crear evento funcionando y cambiado href por routeLink

--- a/RedSports/src/app/crear-evento/crear-evento.page.html
+++ b/RedSports/src/app/crear-evento/crear-evento.page.html
@@ -19,6 +19,6 @@
   </ion-item>
 
   <ion-button expand="full" (click)="addEvent(nombreEvento, descripcionEvento, ubicacionEvento)" 
-        [href]="'/eventos/'">¡Añadir Evento!</ion-button>
+      [routerLink]="'/eventos/'">¡Añadir Evento!</ion-button>
     
 </ion-content>
