Modificado html de evento

--- a/RedSports/src/app/evento/evento.page.html
+++ b/RedSports/src/app/evento/evento.page.html
@@ -9,7 +9,7 @@
     <img src="assets/pelota.png" style="width:60px; height: 60px; margin: 15px; margin-left: 5px"/>
     <ion-label>
       <h1> {{ evento.titulo }} </h1>
-      <p> {{ evento.ubicacion }} </p>
+      <p> Ubicacion: {{ evento.ubicacion }} </p>
     </ion-label>
   </ion-item>
   <ion-grid>
