cambios notificaciones/miseventos

--- a/RedSports/src/app/tabs/tabs.page.html
+++ b/RedSports/src/app/tabs/tabs.page.html
@@ -11,19 +11,20 @@
       <ion-label>Notificaciones</ion-label>
     </ion-tab-button>
 
+    <ion-tab-button tab="mis-eventos">
+        <ion-icon name="tennisball"></ion-icon>
+        <ion-label>Mis Eventos</ion-label>
+      </ion-tab-button>
+
     <ion-tab-button tab="eventos">
-      <ion-icon name="tennisball"></ion-icon>
-      <ion-label>Eventos</ion-label>
+      <ion-icon name="search"></ion-icon>
+      <ion-label>Buscar</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="chat">
       <ion-icon name="chatboxes"></ion-icon>
       <ion-label>Chat</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="pruebas">
-        <ion-icon name="chatboxes"></ion-icon>
-        <ion-label>Pruebas</ion-label>
-      </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
