--- a/RedSports/src/app/mis-eventos/mis-eventos.page.html
+++ b/RedSports/src/app/mis-eventos/mis-eventos.page.html
@@ -19,7 +19,7 @@
 
 <ion-content padding>
         <div id="item" *ngFor="let item of itemsFiltrado">
-            <ion-card color="primary" name="element" style="margin:0px;margin-bottom: 10px">
+            <ion-card [routerLink]="'/tabs/evento/' + item.key" color="primary" name="element" style="margin:0px;margin-bottom: 10px">
                 <ion-item style="--inner-border-width:0">
                     <img src="assets/pelota.png" style="width:128px;height: 128px" padding/>
                     <ion-item-group >
