--- a/RedSports/src/app/login/login.page.scss
+++ b/RedSports/src/app/login/login.page.scss
@@ -34,4 +34,5 @@ ion-button {
     background-image: url("../../assets/bg.jpg");
     background-repeat: no-repeat;
     background-position: center top;
+    padding-top: 10%;
 }
