--- a/RedSports/src/app/evento/evento.page.html
+++ b/RedSports/src/app/evento/evento.page.html
@@ -1,8 +1,21 @@
 <ion-header>
-  <ion-toolbar color="primary">
-    <ion-title>evento</ion-title>
-  </ion-toolbar>
-</ion-header>
+    <ion-toolbar color="primary">
+      <ion-buttons slot="secondary">
+        <ion-button (click)="userProfile()">
+          <ion-icon slot="icon-only" name="contact"></ion-icon>
+        </ion-button>
+        <ion-button (click)="search()">
+          <ion-icon slot="icon-only" name="search"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+      <ion-buttons slot="primary">
+        <ion-button (click)="logout()">
+          <ion-icon slot="icon-only" name="exit"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+      <ion-title><strong>Evento</strong></ion-title>
+    </ion-toolbar>
+  </ion-header>
 
 <ion-content>
   <ion-item>
