--- a/RedSports/src/app/evento/evento.page.html
+++ b/RedSports/src/app/evento/evento.page.html
@@ -19,6 +19,9 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+  <agm-map [latitude]="lat" [longitude]="lng">
+      <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+    </agm-map>
   <ion-button expand='full' color="secondary" block (click)="doPrompt()"  style="margin:10px; width: 46%;float: right;">Invitar</ion-button>
   <ion-button size="medium" expand='full' (click)="apuntarseEnEvento()" [color]=buttonColor style="margin:10px; width: 46%;">{{ participar }}</ion-button>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
