--- a/RedSports/src/app/evento/evento.page.html
+++ b/RedSports/src/app/evento/evento.page.html
@@ -19,10 +19,15 @@
 
 <ion-content>
   <ion-item>
-    <img src="assets/pelota.png" style="width:60px; height: 60px; margin: 15px; margin-left: 5px"/>
+    <img [src]="'assets/'+imagen+'.png'" style="width:60px; height: 60px; margin: 15px; margin-left: 5px"/>
     <ion-label>
       <h1> {{ evento.titulo }} </h1>
       <p> Ubicacion: {{ evento.ubicacion }} </p>
+      <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+        <ion-fab-button (click)="borrarEvento()">
+          <ion-icon name="trash"></ion-icon>
+        </ion-fab-button>
+      </ion-fab>
     </ion-label>
   </ion-item>
   <ion-grid>
@@ -32,15 +37,13 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-  <agm-map [latitude]="lat" [longitude]="lng">
+  <div>
+  <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom">
       <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
     </agm-map>
+  </div>
   <ion-button expand='full' color="secondary" block (click)="doPrompt()"  style="margin:10px; width: 46%;float: right;">Invitar</ion-button>
   <ion-button size="medium" expand='full' (click)="apuntarseEnEvento()" [color]=buttonColor style="margin:10px; width: 46%;">{{ participar }}</ion-button>
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button (click)="borrarEvento()">
-      <ion-icon name="trash"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
+  
   
 </ion-content>
