--- a/RedSports/src/app/inicio/inicio.page.html
+++ b/RedSports/src/app/inicio/inicio.page.html
@@ -1,22 +1,59 @@
 <ion-header>
-  <ion-toolbar color="primary">
-    <ion-buttons slot="secondary">
-      <ion-button (click)="userProfile()">
-        <ion-icon slot="icon-only" name="contact"></ion-icon>
-      </ion-button>
-      <ion-button (click)="search()">
-        <ion-icon slot="icon-only" name="search"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-buttons slot="primary">
-      <ion-button (click)="logout()">
-        <ion-icon slot="icon-only" name="exit"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-title><strong>Inicio</strong></ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content padding>
-
-</ion-content>
+    <ion-toolbar color="primary">
+      <ion-buttons slot="secondary">
+        <ion-button (click)="userProfile()">
+          <ion-icon slot="icon-only" name="contact"></ion-icon>
+        </ion-button>
+        <ion-button (click)="search()">
+          <ion-icon slot="icon-only" name="search"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+      <ion-buttons slot="primary">
+        <ion-button (click)="logout()">
+          <ion-icon slot="icon-only" name="exit"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+      <ion-title><strong>RedSports</strong></ion-title>
+    </ion-toolbar>
+  </ion-header>
+  
+  <ion-content padding>
+    <div id="item" *ngFor="let post of posts">
+      <ion-card>
+        <ion-item>
+          <ion-avatar item-start>
+            <img src="../../assets/avatar/{{post.img}}.png">
+          </ion-avatar>
+          <h2 style="margin-left: 2%">{{post.nick}}</h2>
+          <p style="margin-right: 5%; right: 0; position: absolute">{{post.fecha}}</p>
+        </ion-item>
+      
+        <ion-card-content>
+          <p>Wait a minute. Wait a minute, Doc. Uhhh... Are you telling me that you built a time machine... out of a DeLorean?! Whoa. This is heavy.</p>
+        </ion-card-content>
+      
+        <ion-row>
+          <ion-col style="text-align: center">
+            <button ion-button large>
+              <ion-icon name="thumbs-up"></ion-icon>
+              <div>{{post.likes}} Likes</div>
+            </button>
+          </ion-col>
+  
+          <ion-col style="text-align: center">
+            <button ion-button large>
+              <ion-icon name="text"></ion-icon>
+              <div>{{post.numComments}} Comments</div>
+            </button>
+          </ion-col>
+        </ion-row>
+      </ion-card>
+    </div>
+  
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+        <ion-fab-button [routerLink]="'/tabs/crear-post'">
+          <ion-icon name="add"></ion-icon>
+        </ion-fab-button>
+      </ion-fab>
+  </ion-content>
+  
