cambios notificaciones enlace/accion

--- a/RedSports/src/app/notificaciones/notificaciones.page.html
+++ b/RedSports/src/app/notificaciones/notificaciones.page.html
@@ -18,36 +18,35 @@
       </ion-header>
 
       <ion-content padding>
-        <div id="item" *ngFor="let item of itemsPorLeer">
-            <ion-card [routerLink]="'/tabs/evento/' + item.key" color="primary" name="element" style="margin:0px;margin-bottom: 10px">
+        <h5>No Leidos</h5>
+        <div id="item" *ngFor="let item1 of itemsPorLeer">
+            <ion-card  color="primary" name="element"  style="margin:0px;margin-bottom: 10px">
                 <ion-item style="--inner-border-width:0">
-                    <img src="assets/pelota.png" style="width:128px;height: 128px" padding/>
-                    <ion-item-group >
+                    <ion-icon name="eye" (click)="marcarVisto(item1.key)"></ion-icon>
+                    <ion-item-group (click)="redirect(item1.enlace)" style="width: 100%">
                         <ion-item-divider style="border-bottom:none">
-                            <ion-label><strong>{{item.leido}}</strong></ion-label>
+                            <ion-label><strong>{{item1.titulo}}</strong></ion-label>
                         </ion-item-divider>
                         <ion-item-divider style="border-bottom:none">
-                            <ion-label>{{item.fecha}}</ion-label>
+                            <ion-label>{{item1.texto}}</ion-label>
                         </ion-item-divider>
                     </ion-item-group>
                 </ion-item>
-                <ion-label>{{item.key}}</ion-label>
             </ion-card>
         </div>
-        <div id="item" *ngFor="let item of itemsLeidos">
-            <ion-card [routerLink]="'/tabs/evento/' + item.key" color="primary" name="element" style="margin:0px;margin-bottom: 10px">
+        <h5>Leidos</h5>
+        <div id="item" *ngFor="let item2 of itemsLeidos">
+            <ion-card [routerLink]="item2.enlace" color="primary" name="element" style="margin:0px;margin-bottom: 10px">
                 <ion-item style="--inner-border-width:0">
-                    <img src="assets/pelota.png" style="width:128px;height: 128px" padding/>
                     <ion-item-group >
                         <ion-item-divider style="border-bottom:none">
-                            <ion-label><strong>{{item.leido}}</strong></ion-label>
+                            <ion-label><strong>{{item2.titulo}}</strong></ion-label>
                         </ion-item-divider>
                         <ion-item-divider style="border-bottom:none">
-                            <ion-label>{{item.fecha}}</ion-label>
+                            <ion-label>{{item2.texto}}</ion-label>
                         </ion-item-divider>
                     </ion-item-group>
                 </ion-item>
-                <ion-label>{{item.key}}</ion-label>
             </ion-card>
         </div>
 </ion-content>
